server_debug.log
[dotenv@17.3.1] injecting env (2) from .env -- tip: ≡ƒ¢í∩╕Å auth for agents: https://vestauth.com
≡ƒÜÇ Servidor corriendo en http://localhost:8080
Γ£à Conectado a MySQL correctamente
Γ£à Tabla de tokens verificada/creada
Γ£à Tabla de evaluaciones verificada/creada
SyntaxError: Expected property name or '}' in JSON at position 1 (line 1 column 2)
    at JSON.parse (<anonymous>)
    at parse (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\body-parser\lib\types\json.js:72:19)
    at C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\body-parser\lib\read.js:162:18
    at AsyncResource.runInAsyncScope (node:async_hooks:228:14)
    at invokeCallback (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:508:28)
    at endReadableNT (node:internal/streams/readable:1729:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: read ECONNRESET
    at TCP.onStreamRead (node:internal/stream_base_commons:216:20)
Emitted 'error' event on Connection instance at:
    at Connection._notifyError (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\mysql2\lib\base\connection.js:247:12)
    at Connection._handleFatalError (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\mysql2\lib\base\connection.js:178:10)
    at Connection._handleNetworkError (C:\Users\Laptop\Documents\Pasantia\proevent\BackendPROEVENT\node_modules\mysql2\lib\base\connection.js:191:10)
    at Socket.emit (node:events:508:28)
    at emitErrorNT (node:internal/streams/destroy:170:8)
    at emitErrorCloseNT (node:internal/streams/destroy:129:3)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  errno: -4077,
  code: 'ECONNRESET',
  syscall: 'read',
  fatal: true
}

Node.js v24.14.0
